# square_image_cropper

./: .gitignore  LICENSE  Makefile  README.md  cfg.yaml  pyproject.toml
src/: main.py
